--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "A lightweight application-managed GC",
   "type": "module",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "typings": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "vite build",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "dev": "vite build --watch",
+    "prepublish": "vite build"
   },
   "keywords": [
     "orinoco",
@@ -21,6 +26,8 @@
     "@types/eslint__js": "^8.42.3",
     "eslint": "^9.9.1",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.4.0"
+    "typescript-eslint": "^8.4.0",
+    "vite": "^5.4.2",
+    "vite-plugin-dts": "^4.1.0"
   }
 }
