--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "orinoco",
     "gc"
   ],
+  "files": [
+    "dist/**/*"
+  ],
   "author": "Huy-DNA",
-  "license": "Apache",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@changesets/cli": "^2.27.7",
     "@eslint/js": "^9.9.1",
