--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - run: npm install -g pnpm
+      - run: npm install -g pnpm@^9.9.0
       - run: pnpm install
       - run: pnpm lint
       - run: pnpm build
