--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: publish
 
 on:
   push:
-    branches: [ 'main' ]
+    branches: [ "main" ]
 
 jobs:
   publish:
@@ -12,7 +12,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          cache: pnpm
           registry-url: https://npm.pkg.github.com
       - run: npm install -g pnpm@^9.9.0
       - run: pnpm install --frozen-lockfile
